--- a/package.json
+++ b/package.json
@@ -39,13 +39,15 @@
     "react-native-screens": "~4.10.0",
     "react-native-wagmi-charts": "^2.7.0",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "twelvedata": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
+    "expo-module-scripts": "^4.1.7",
     "typescript": "~5.8.3"
   },
   "private": true
